feat(historial): implementar endpoints y servicios para la recuperación del historial de compras del usuario
