# src/modules/historial/router.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { getHistorial } from './controller.js';
+
+const router = Router();
+
+router.get('/:userId', getHistorial);
+
+export default router;
